// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Language "en" locale returns correct message for components.ActionsButton.button 1`] = `
<span>
  Actions
</span>
`;

exports[`Language "en" locale returns correct message for components.ColumnsSettings.reset 1`] = `
<span>
  Reset to default
</span>
`;

exports[`Language "en" locale returns correct message for components.ColumnsSettings.title 1`] = `
<span>
  Table settings
</span>
`;

exports[`Language "en" locale returns correct message for components.Filters.reset 1`] = `
<span>
  Reset all filters
</span>
`;

exports[`Language "en" locale returns correct message for components.Filters.title 1`] = `
<span>
  Table filtering
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.Forbidden.description 1`] = `
<span>
  Contact the support center to get access
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.Forbidden.title 1`] = `
<span>
  Forbidden
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.InternalServerError.description 1`] = `
<span>
  Page is unavailable at this moment - try again in few minutes
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.InternalServerError.title 1`] = `
<span>
  Internal server error
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.NotFound.description 1`] = `
<span>
  Try another link or return to the main page
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.NotFound.title 1`] = `
<span>
  Page not found
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.button 1`] = `
<span>
  Go main
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.phone 1`] = `
<span>
  Tel
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.schedule 1`] = `
<span>
  Schedule: from 9:00 to 21:00
</span>
`;

exports[`Language "en" locale returns correct message for components.Status.support 1`] = `
<span>
  Support
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.ascending.alphabetical 1`] = `
<span>
  Z → A
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.ascending.default 1`] = `
<span>
  Ascending
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.ascending.novelty 1`] = `
<span>
  Old first
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.column 1`] = `
<span>
  Column
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.descending.alphabetical 1`] = `
<span>
  A → Z
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.descending.default 1`] = `
<span>
  Descending
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.descending.novelty 1`] = `
<span>
  New first
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.filter 1`] = `
<span>
  Filtering
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.hide 1`] = `
<span>
  Hide
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.pin 1`] = `
<span>
  Pin
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.reset 1`] = `
<span>
  Reset
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.settings 1`] = `
<span>
  Settings
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.sorter 1`] = `
<span>
  Sorting
</span>
`;

exports[`Language "en" locale returns correct message for features.Table.unpin 1`] = `
<span>
  Unpin
</span>
`;

exports[`Language "en" locale returns correct message for general.clear 1`] = `
<span>
  Clear
</span>
`;

exports[`Language "en" locale returns correct message for general.close 1`] = `
<span>
  Close
</span>
`;

exports[`Language "en" locale returns correct message for general.empty 1`] = `
<span>
  No data
</span>
`;

exports[`Language "en" locale returns correct message for general.error 1`] = `
<span>
  Internal server error
</span>
`;

exports[`Language "en" locale returns correct message for general.open 1`] = `
<span>
  Open
</span>
`;

exports[`Language "en" locale returns correct message for general.reset 1`] = `
<span>
  Reset
</span>
`;

exports[`Language "en" locale returns correct message for general.signin 1`] = `
<span>
  SignIn
</span>
`;

exports[`Language "en" locale returns correct message for general.signup 1`] = `
<span>
  SignUp
</span>
`;

exports[`Language "en" locale returns correct message for primitives.Actions.accept 1`] = `
<span>
  Accept
</span>
`;

exports[`Language "en" locale returns correct message for primitives.Actions.cancel 1`] = `
<span>
  Cancel
</span>
`;

exports[`Language "en" locale returns correct message for primitives.Actions.selected 1`] = `
<span>
  Selected values:
</span>
`;

exports[`Language "en" locale returns correct message for primitives.Pagination.jumpto 1`] = `
<span>
  to page
</span>
`;

exports[`Language "en" locale returns correct message for primitives.Pagination.next 1`] = `
<span>
  Next
</span>
`;

exports[`Language "en" locale returns correct message for primitives.Pagination.prev 1`] = `
<span>
  Prev
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Apps.all 1`] = `
<span>
  All services
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Apps.title 1`] = `
<span>
  All services
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Header.analytics 1`] = `
<span>
  Analytics
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Header.chat 1`] = `
<span>
  Chat
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Header.info 1`] = `
<span>
  Info
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Header.notifications 1`] = `
<span>
  Notifications
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Header.support 1`] = `
<span>
  Support
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Profile.logout 1`] = `
<span>
  Logout
</span>
`;

exports[`Language "en" locale returns correct message for widgets.Layout.Profile.profile 1`] = `
<span>
  Profile
</span>
`;

exports[`Language "ru" locale returns correct message for components.ActionsButton.button 1`] = `
<span>
  Действия
</span>
`;

exports[`Language "ru" locale returns correct message for components.ColumnsSettings.reset 1`] = `
<span>
  Сбросить всё
</span>
`;

exports[`Language "ru" locale returns correct message for components.ColumnsSettings.title 1`] = `
<span>
  Настройка таблицы
</span>
`;

exports[`Language "ru" locale returns correct message for components.Filters.reset 1`] = `
<span>
  Сбросить всё
</span>
`;

exports[`Language "ru" locale returns correct message for components.Filters.title 1`] = `
<span>
  Фильтрация таблицы
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.Forbidden.description 1`] = `
<span>
  Чтобы получить доступ, обратитесь в поддержку
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.Forbidden.title 1`] = `
<span>
  Недостаточно прав
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.InternalServerError.description 1`] = `
<span>
  Страница может быть недоступна некоторое время — попробуйте зайти через несколько минут
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.InternalServerError.title 1`] = `
<span>
  Технические работы
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.NotFound.description 1`] = `
<span>
  Попробуйте другую ссылку или вернитесь на главную страницу
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.NotFound.title 1`] = `
<span>
  Страница не найдена
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.button 1`] = `
<span>
  На главную
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.phone 1`] = `
<span>
  Телефон
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.schedule 1`] = `
<span>
  График работы: c 9:00 до 21:00 без выходных
</span>
`;

exports[`Language "ru" locale returns correct message for components.Status.support 1`] = `
<span>
  Портал поддержки
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.ascending.alphabetical 1`] = `
<span>
  А → Я
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.ascending.default 1`] = `
<span>
  По возрастанию
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.ascending.novelty 1`] = `
<span>
  Сначала старые
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.column 1`] = `
<span>
  Колонка
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.descending.alphabetical 1`] = `
<span>
  Я → А
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.descending.default 1`] = `
<span>
  По убыванию
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.descending.novelty 1`] = `
<span>
  Сначала новые
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.filter 1`] = `
<span>
  Фильтрация
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.hide 1`] = `
<span>
  Скрыть
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.pin 1`] = `
<span>
  Закрепить
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.reset 1`] = `
<span>
  Сбросить
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.settings 1`] = `
<span>
  Настройки
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.sorter 1`] = `
<span>
  Сортировка
</span>
`;

exports[`Language "ru" locale returns correct message for features.Table.unpin 1`] = `
<span>
  Открепить
</span>
`;

exports[`Language "ru" locale returns correct message for general.clear 1`] = `
<span>
  Очистить
</span>
`;

exports[`Language "ru" locale returns correct message for general.close 1`] = `
<span>
  Закрыть
</span>
`;

exports[`Language "ru" locale returns correct message for general.empty 1`] = `
<span>
  Ничего не найдено
</span>
`;

exports[`Language "ru" locale returns correct message for general.error 1`] = `
<span>
  Непредвиденная ошибка
</span>
`;

exports[`Language "ru" locale returns correct message for general.open 1`] = `
<span>
  Открыть
</span>
`;

exports[`Language "ru" locale returns correct message for general.reset 1`] = `
<span>
  Сбросить
</span>
`;

exports[`Language "ru" locale returns correct message for general.signin 1`] = `
<span>
  Войти
</span>
`;

exports[`Language "ru" locale returns correct message for general.signup 1`] = `
<span>
  Регистрация
</span>
`;

exports[`Language "ru" locale returns correct message for primitives.Actions.accept 1`] = `
<span>
  Принять
</span>
`;

exports[`Language "ru" locale returns correct message for primitives.Actions.cancel 1`] = `
<span>
  Отмена
</span>
`;

exports[`Language "ru" locale returns correct message for primitives.Actions.selected 1`] = `
<span>
  Выбрано значений:
</span>
`;

exports[`Language "ru" locale returns correct message for primitives.Pagination.jumpto 1`] = `
<span>
  на страницу
</span>
`;

exports[`Language "ru" locale returns correct message for primitives.Pagination.next 1`] = `
<span>
  Следующие
</span>
`;

exports[`Language "ru" locale returns correct message for primitives.Pagination.prev 1`] = `
<span>
  Предыдущие
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Apps.all 1`] = `
<span>
  Все сервисы
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Apps.title 1`] = `
<span>
  Все сервисы
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Header.analytics 1`] = `
<span>
  Аналитика
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Header.chat 1`] = `
<span>
  Чат
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Header.info 1`] = `
<span>
  Помощь
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Header.notifications 1`] = `
<span>
  Уведомления
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Header.support 1`] = `
<span>
  Поддержка
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Profile.logout 1`] = `
<span>
  Выйти
</span>
`;

exports[`Language "ru" locale returns correct message for widgets.Layout.Profile.profile 1`] = `
<span>
  Профиль в S.Team
</span>
`;
